// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link when "size" is large and "textAlign" is left renders correctly 1`] = `
.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 16px;
  line-height: 24px;
  display: inline-block;
  text-align: left;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
</a>
`;

exports[`Link when "size" is large and "textAlign" is right renders correctly 1`] = `
.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 16px;
  line-height: 24px;
  display: inline-block;
  text-align: right;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
</a>
`;

exports[`Link when "size" is large renders correctly 1`] = `
.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 16px;
  line-height: 24px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
</a>
`;

exports[`Link when "size" is large with "after" icon and "disabled" is "true" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 16px;
  line-height: 24px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography rovna-ui-typography-disabled c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
</a>
`;

exports[`Link when "size" is large with "after" icon with icon right renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 16px;
  line-height: 24px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
</a>
`;

exports[`Link when "size" is large with "before" icon and "disabled" is "true" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 16px;
  line-height: 24px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography rovna-ui-typography-disabled c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
  I am a link
</a>
`;

exports[`Link when "size" is large with "before" icon renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 16px;
  line-height: 24px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
  I am a link
</a>
`;

exports[`Link when "size" is medium and "textAlign" is left renders correctly 1`] = `
.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  display: inline-block;
  text-align: left;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
</a>
`;

exports[`Link when "size" is medium and "textAlign" is right renders correctly 1`] = `
.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  display: inline-block;
  text-align: right;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
</a>
`;

exports[`Link when "size" is medium renders correctly 1`] = `
.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
</a>
`;

exports[`Link when "size" is medium with "after" icon and "disabled" is "true" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography rovna-ui-typography-disabled c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
</a>
`;

exports[`Link when "size" is medium with "after" icon with icon right renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
</a>
`;

exports[`Link when "size" is medium with "before" icon and "disabled" is "true" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography rovna-ui-typography-disabled c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
  I am a link
</a>
`;

exports[`Link when "size" is medium with "before" icon renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
  I am a link
</a>
`;

exports[`Link when "size" is small and "textAlign" is left renders correctly 1`] = `
.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 12px;
  line-height: 16px;
  display: inline-block;
  text-align: left;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
</a>
`;

exports[`Link when "size" is small and "textAlign" is right renders correctly 1`] = `
.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 12px;
  line-height: 16px;
  display: inline-block;
  text-align: right;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
</a>
`;

exports[`Link when "size" is small renders correctly 1`] = `
.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 12px;
  line-height: 16px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
</a>
`;

exports[`Link when "size" is small with "after" icon and "disabled" is "true" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 12px;
  line-height: 16px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography rovna-ui-typography-disabled c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
</a>
`;

exports[`Link when "size" is small with "after" icon with icon right renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 12px;
  line-height: 16px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  I am a link
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
</a>
`;

exports[`Link when "size" is small with "before" icon and "disabled" is "true" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 12px;
  line-height: 16px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography rovna-ui-typography-disabled c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
  I am a link
</a>
`;

exports[`Link when "size" is small with "before" icon renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-typography {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 4px;
  font-size: 12px;
  line-height: 16px;
}

.c0.rovna-ui-typography > u {
  gap: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-typography:focus {
  border-radius: 4px;
  background-color: #007BFB26;
}

.c0.rovna-ui-typography .anticon {
  font-size: 16px;
}

<a
  className="rovna-ui-typography c0 rovna-ui-typography-link css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-link"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="c1 rovna-ui-icon-root anticon"
    data-testid="rovna-ui-chevron-down-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
  I am a link
</a>
`;
